Improve tooltip display for missing task links in e() function; enhance CSS for tooltip styling with font and size adjustments.

--- a/html/style.css
+++ b/html/style.css
@@ -73,6 +73,8 @@ pre {
 .has-tooltip:hover .tooltip {
     display: block;
     opacity: 1.00;
+    font-family: serif;
+    font-size: 16px;
 }
 
 .monospace {
