--- a/html/style.css
+++ b/html/style.css
@@ -80,3 +80,26 @@ pre {
 .monospace {
     font-family: monospace;
 }
+
+@media (prefers-color-scheme: dark) {
+    * {
+        color-scheme: dark;
+    }
+
+    html {
+        background: #111;
+        color: white;
+    }
+
+    nav, footer {
+        background: #222;
+    }
+
+    a:not(:visited) {
+        color: green;
+    }
+
+    a:visited {
+        color: yellow;
+    }
+}
