Add link styling in CSS: remove text decoration for links and underline on hover for improved user experience.

--- a/html/style.css
+++ b/html/style.css
@@ -17,6 +17,14 @@ nav {
 	border-bottom: 1px solid grey;
 }
 
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 main {
 	flex-grow: 1;
 	padding-inline: 8px;
